--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "realm": "^12.14.2"
+    "realm": "^12.14.2",
+    "expo-insights": "~0.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
